--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "faker": "^5.5.2",
     "react": "16.13.1",
     "react-native": "0.63.2",
     "react-native-reanimated": "^2.1.0",
