--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "faker": "^5.5.2",
     "react": "16.13.1",
     "react-native": "0.63.2",
+    "react-native-gesture-handler": "^1.10.3",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^2.1.0",
     "react-native-vector-icons": "^8.1.0"
