--- a/package.json
+++ b/package.json
@@ -10,13 +10,21 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/native": "^5.9.4",
+    "@react-navigation/stack": "^5.14.4",
     "faker": "^5.5.2",
     "react": "16.13.1",
     "react-native": "0.63.2",
+    "react-native-animatable": "^1.3.3",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^2.1.0",
-    "react-native-vector-icons": "^8.1.0"
+    "react-native-safe-area-context": "^3.2.0",
+    "react-native-screens": "^3.0.0",
+    "react-native-shared-element": "^0.7.0",
+    "react-native-vector-icons": "^8.1.0",
+    "react-navigation-shared-element": "^5.0.0-alpha1"
   },
   "devDependencies": {
     "@babel/core": "^7.13.14",
