--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "react-native-animatable": "^1.3.3",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-pose": "^0.9.1",
     "react-native-reanimated": "^2.1.0",
     "react-native-redash": "^14.2.1",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.0.0",
     "react-native-shared-element": "^0.7.0",
+    "react-native-svg": "^12.1.0",
     "react-native-vector-icons": "^8.1.0",
     "react-navigation-shared-element": "^5.0.0-alpha1"
   },
